Resolve "Grid spacing"

--- a/src/components/docs/layout/grid/grid-test.component.scss
+++ b/src/components/docs/layout/grid/grid-test.component.scss
@@ -4,7 +4,3 @@
 [block] {
   height: 100%;
 }
-
-[col] {
-  border: 1px dashed $jnt-secondary-color;
-}
